--- a/templates/configure_tournament.html
+++ b/templates/configure_tournament.html
@@ -58,7 +58,7 @@
                         <tr>
                             <th class="is-one-eight">#</th> <!-- Larger size with is-two-thirds -->
                             <th class="is-two-thirds">Team</th> <!-- Larger size with is-two-thirds -->
-                            <th class="is-two-thirds">Opponent</th> <!-- Larger size with is-two-thirds -->
+                            <!-- <th class="is-two-thirds">Opponent</th>  -->
                             <th class="is-one-third">Action</th> <!-- Smaller size with is-one-third -->
                         </tr>
                     </thead>
@@ -69,7 +69,7 @@
                                 <td>{{ forloop.counter }}</td>
                                 <td class="team" contenteditable="true">{{ team.team_name }}</td>
 
-                                <td class="opponent" contenteditable="true">{{ team.opponent }}</td>
+                                <!-- <td class="opponent" contenteditable="true">{{ team.opponent }}</td> -->
                                 <td>
                                     <div class="action-btns">
                                         <a class="button is-primary" onclick="addTeam('{{team.id}}', this)">
