--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                         {% for tournament in tournaments %}
                         <td>{{tournament.tournament}}</td>
                         <td>
-                            <a class="button is-primary" href="#">View Results</a> 
+                            <a class="button is-primary" href="/view_results/{{tournament.id}}">View Results</a> 
                             {% if tournament.started == False %}
                             <a class="button is-info" href="configure_tournament/{{tournament.id}}">Update Tournament</a>
                             {% else %}
